<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        android:elevation="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_root"
            android:layout_width="match_parent"
            android:background="?selectableItemBackground"
            android:padding="@dimen/_6sdp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/bg_item_logo"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toTopOf="@+id/tv_strength"
                app:layout_constraintStart_toEndOf="@+id/tv_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="sans-serif"
                android:text="@string/strength"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toTopOf="@+id/lb_dose"
                app:layout_constraintEnd_toEndOf="@+id/lb_dose"
                app:layout_constraintStart_toStartOf="@+id/lb_dose"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0" />

            <TextView
                android:id="@+id/lb_dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/dose"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dose" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>